--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ ul.project-header li:hover {
 
 
 .star-one {
-  margin-left: 16px;
+  margin-left: 20px;
   margin-top: 50px;
   padding: 16px;
   display: flex;
@@ -277,6 +277,12 @@ h3 {
   font-weight: 100;
   color: #5D3A2C;
 }
+
+.first-project a {
+  text-decoration: none; /* Removes the underline */
+  color: inherit;        /* Keeps the text color from the parent */
+}
+
 
 .first-project .number-right {
   font-size: 30px;
