--- a/mpa.css
+++ b/mpa.css
@@ -1,6 +1,6 @@
 /* General body styles */
 body {
-    font-size: 16px;
+    font-size: 14px;
     margin: 0;
     padding: 0;
     background-color: #F7F1DF;
@@ -110,12 +110,19 @@ body {
     color:#5D3A2C;
     padding: 30px;
     margin-left: 42px;
-    margin-top: 50px;
+    margin-top: 100px;
   }
 
 
 
   .background-p {
-    width: 80;
+    width: 70%;
+    padding: 20px;
+    line-height: 2.0;
+    margin-left: 50px;
+    margin-top: -60px;
+    font-family: "Courier Prime";
+    color:#9F8075;
+
   }
   
